# studious-guide

./: .dockerignore  .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml
backend/: .env.example  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_create_users_table.py  002_create_projects_table.py  003_create_source_documents_table.py  005_create_extractions_table.py  006_create_prompt_templates_and_seed.py  007_create_compendium_sections_table.py  008_create_notion_configs_table.py  009_add_notion_oauth_fields.py  010_seed_audit_checklists.py  011_ecos_maps.py  012_add_stale_flag_to_sections.py  013_ecos_autopopulate_v2.py  014_ecos_autopopulate_v3.py  015_add_model_used_to_ecos_maps.py  7bb70c4aeb77_sprint0_cleanup_relationships_status_.py
backend/app/: config.py  database.py  dependencies.py  main.py
backend/app/models/: __init__.py  compendium_section.py  ecos_map.py  extraction.py  notion_config.py  project.py  prompt_template.py  source_document.py  user.py
backend/app/services/: orchestrator.py  storage.py
backend/app/workers/: __init__.py  compendium_jobs.py  (+2 more)
backend/scripts/: compare_motors.py
backend/tests/: conftest.py  test_ai_gateway.py  test_audit.py  test_auth.py  test_cogeneration.py  test_compare_motors.py  test_compendiums.py  test_conversation.py  test_documents.py  test_ecos_map.py  test_extraction_worker.py  test_extractions.py  test_generation_worker.py  test_notion.py  test_projects.py  test_prompts.py  test_public_sources.py  test_publishing.py  test_section_builder.py
(+178 files in other folders)
