[project]
name = "sam-platform-backend"
version = "0.1.0"
description = "Backend API for SAM Platform — Medical Compendium Generator"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "pydantic[email]",
    "PyJWT>=2.10",
    "bcrypt>=4.2",
    "python-multipart>=0.0",
    "arq>=0.26",
    "redis>=5.2",
    "httpx>=0.28",
    "structlog>=24",
    "openai>=1.61",
    "aiobotocore>=2.21",
    "tenacity>=9.0",
    "pymupdf4llm>=0.0",
    "notion-client>=2.2",
    "aiofiles>=24",
    "cryptography>=44",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "mypy>=1.13",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
